feat: add chrome.storage functionality

--- a/focus/popup.html
+++ b/focus/popup.html
@@ -7,7 +7,7 @@
   <body>
     <main>
         <div class="timer">
-            <span class="time-left">25:00</span>
+            <span class="time-left">--:--</span>
         </div>
 
         <div class="controls">
